# iDMA

./: .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  Bender.local  Bender.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  idma.mk  jobs.json  pyproject.toml  requirements.txt
.ci/: gitlab-ci.yml.tpl
.github/: authors-cfg.yaml  pull_request_template.md  verible.waiver  yamllint-conf.yml
doc/: .gitignore  Makefile
jobs/: .gitignore  README.md  convert_jobs.py  jobs.json
scripts/: check-license  dma_backend.py  dma_trace.py  list-contributors  list-todos  python-lint  start.tcl  start_vcs  start_vsim.tcl  verible-lint
src/: dmac_wrap.sv  idma_axi_lite_transport_layer.sv  idma_backend.sv  idma_channel_coupler.sv  idma_error_handler.sv  idma_legalizer.sv  idma_obi_transport_layer.sv  idma_pkg.sv  pulp_idma_wrap.sv
src_future/: Bender.yml  idma_legalizer_page_splitter.sv  idma_legalizer_pow2_splitter.sv
test/: Bender.yml  highlighter.sv  idma_intf.sv  idma_obi2axi_bridge.sv  idma_obi_asserter.sv  idma_sim_mem.sv  idma_tb_per2axi.sv  idma_test.sv  idma_tilelink2axi_bridge.sv  stream_throttle.sv  tb_idma_backend.sv  tb_idma_backend.sv.tpl  tb_idma_desc64_top.sv  tb_idma_improved_fifo.sv  tb_idma_lite_backend.sv  tb_idma_nd_backend.sv  tb_idma_obi_backend.sv  watchdog.sv
test_future/: idma_axi_driver.sv  idma_proto_test.sv  idma_protocol_driver.sv  idma_source.sv  tb_new_idma_backend_rw_axi.sv
util/: deploy.py  gen_ci.py  gen_idma.py  gen_jobs.py  idma_gen.py  licence-checker.hjson  lint-authors.py  list-contributors.py  (+6 more)
(+460 files in other folders)
